[project]
name = "owasp-asvs-csv-converter"
version = "0.1.0"
description = "Generates and merges English/Japanese OWASP ASVS 5.0 CSV files."
authors = [
    { name = "yaboxi", email = "z.yaboxi@gmail.com" }, # Please update this
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pandas-stubs",
]

# Add other sections like [tool.ruff] or [tool.mypy] for configuration if needed later
